Fase final, se modificó el proyecto únicamente con el fin de hacer mejoras a los acabados estéticos del mismo

--- a/InformePOO.csproj
+++ b/InformePOO.csproj
@@ -6,4 +6,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="BlackJack.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="BlackJack.png" />
+  </ItemGroup>
+
 </Project>
