--- a/InformePOO.csproj
+++ b/InformePOO.csproj
@@ -4,6 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>BlackJack.ico</ApplicationIcon>
+    <AssemblyName>BlackJack</AssemblyName>
+    <RootNamespace>BlackJack</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
